[gd_scene load_steps=3 format=3 uid="uid://xb0o7fwcpsni"]

[ext_resource type="PackedScene" uid="uid://c2ubkrevhir58" path="res://Views/Menus/SettingsButtons.tscn" id="1_gvpta"]
[ext_resource type="Script" path="res://Views/Menus/VisualSettings.gd" id="1_yc4to"]

[node name="VisualSettings" type="Node2D"]
script = ExtResource("1_yc4to")

[node name="SettingsButtons" parent="." instance=ExtResource("1_gvpta")]
position = Vector2(700, 100)

[node name="Default" type="Button" parent="."]
offset_left = 704.0
offset_top = 296.0
offset_right = 854.0
offset_bottom = 396.0
text = "Default"

[node name="Accessible" type="Button" parent="."]
offset_left = 880.0
offset_top = 296.0
offset_right = 1030.0
offset_bottom = 396.0
text = "Visually 
accessible"

[node name="Custom" type="Button" parent="."]
offset_left = 1064.0
offset_top = 296.0
offset_right = 1214.0
offset_bottom = 396.0
text = "Custom
"

[node name="DialogueToggle" type="CheckButton" parent="."]
offset_left = 1002.0
offset_top = 430.0
offset_right = 1046.0
offset_bottom = 454.0

[node name="ParallaxToggle" type="CheckButton" parent="."]
offset_left = 1002.0
offset_top = 470.0
offset_right = 1046.0
offset_bottom = 494.0

[node name="HighconstrastToggle" type="CheckButton" parent="."]
offset_left = 1002.0
offset_top = 515.0
offset_right = 1046.0
offset_bottom = 539.0

[node name="Dialogue" type="Label" parent="."]
offset_left = 821.0
offset_top = 430.0
offset_right = 946.0
offset_bottom = 453.0
text = "Dialogue effects"

[node name="Parallax" type="Label" parent="."]
offset_left = 821.0
offset_top = 470.0
offset_right = 980.0
offset_bottom = 493.0
text = "Parallax background
"

[node name="High contrast" type="Label" parent="."]
offset_left = 821.0
offset_top = 515.0
offset_right = 974.0
offset_bottom = 538.0
text = "High contrast mode"

[node name="Return" type="Button" parent="."]
offset_left = 49.0
offset_top = 40.0
offset_right = 94.0
offset_bottom = 71.0
text = "Back"

[connection signal="pressed" from="Default" to="." method="_on_default_pressed"]
[connection signal="pressed" from="Accessible" to="." method="_on_accessible_pressed"]
[connection signal="pressed" from="Custom" to="." method="_on_custom_pressed"]
[connection signal="toggled" from="DialogueToggle" to="." method="_on_dialogue_toggle_toggled"]
[connection signal="toggled" from="ParallaxToggle" to="." method="_on_parallax_toggle_toggled"]
[connection signal="toggled" from="HighconstrastToggle" to="." method="_on_highconstrast_toggle_toggled"]
[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]

[editable path="SettingsButtons"]
